syntax = "proto3";

package product;

option go_package = "pb";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string category = 5;
    string image = 6;
}

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string product_id = 1;
}

message ProductResponse {
    Product product = 1;
}
